--- a/src/app/material-component/admin-section/admin-section.component.html
+++ b/src/app/material-component/admin-section/admin-section.component.html
@@ -3,17 +3,17 @@
         <mat-tab-group mat-align-tabs="center" >
             <mat-tab *ngFor="let league of managed_leagues" label="{{league.name}}">
                 <br>
-                <button mat-button type="button" class="block" color="primary">Create A Special Event</button>
+                <button mat-button type="button" class="block" color="primary" routerLink="/{{league.id}}/special-event">Create A Special Event</button>
                 <br>
-                <button mat-button type="button" class="block" color="primary" routerLink="/reports/{{league.id}}">Review Matches</button>
-                <br>
+                <button mat-button type="button" class="block" color="primary" routerLink="/{{league.id}}/reports">Review Matches</button>
+                <!-- <br>
                 <button mat-button type="button" class="block" color="primary">Review Requests</button>
                 <br>
                 <button mat-button type="button" class="block" color="primary">Add a new Admin</button>
                 <br>
                 <button mat-button type="button" class="block" color="primary">Get More Places</button>
                 <br>
-                <button mat-button type="button" class="block" color="primary">Support</button>
+                <button mat-button type="button" class="block" color="primary">Support</button> -->
             </mat-tab>
     
         </mat-tab-group>
