login api is working on back-front end, logout still needed

--- a/src/app/material-component/home/home.component.html
+++ b/src/app/material-component/home/home.component.html
@@ -6,7 +6,9 @@
         </button>
         <img class="profile_pic" src="/assets/images/users/img_avatar.png">
         <div>
-            <h3> Michele Berlanda </h3>
+            <h3> Giacomo Pilotti </h3>
+            <p> {{ ss }} </p>
+
         </div>
 
         <mat-divider></mat-divider>
