login is sending all the needed data + logout on frontend side

--- a/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/src/app/layouts/full/sidebar/sidebar.component.html
@@ -31,5 +31,8 @@
 
         
     </mat-list-item>
+    <button mat-button (click)="logout()"> 
+        <mat-icon>logout</mat-icon> Logout
+    </button>
 
 </mat-nav-list>
