guards for all the components + edit basic page

--- a/src/app/material-component/home/home.component.html
+++ b/src/app/material-component/home/home.component.html
@@ -1,13 +1,13 @@
 <mat-card>
     <mat-card-content>
-        <button mat-raised-button class="edit_btn" color="primary">
+        <button mat-raised-button class="edit_btn" routerLink="{{owner?.id}}/edit-profile" color="primary">
             <mat-icon>edit</mat-icon>
             Edit
         </button>
         <img class="profile_pic" src="/assets/images/users/img_avatar.png">
         <div>
-            <h3> Giacomo Pilotti </h3>
-            <p> {{ ss }} </p>
+            <h3> {{ owner?.name }} </h3>
+            <span> # {{owner?.username }} </span>
 
         </div>
 
