--- a/src/app/material-component/login/login.component.html
+++ b/src/app/material-component/login/login.component.html
@@ -18,9 +18,12 @@
     <div class="form-group">
         <button class="btn btn-primary">
             <span class="spinner-border spinner-border-sm mr-1"></span>
-            Register
+            Login
         </button>
-        <a routerLink="/login" class="btn btn-link">Cancel</a>
+        <button class="btn btn-link" routerLink="/register">
+            <span class="spinner-border spinner-border-sm mr-1"></span>
+            New Account
+        </button>
     </div>
 </form>
 
