--- a/src/app/material-component/register/register.component.html
+++ b/src/app/material-component/register/register.component.html
@@ -34,6 +34,6 @@
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Register
         </button>
-        <a routerLink="/login" class="btn btn-link">Cancel</a>
+        <a routerLink="/upload-img" class="btn btn-link">Cancel</a>
     </div>
 </form>
