--- a/src/app/material-component/home/ranking-list/ranking-list.component.html
+++ b/src/app/material-component/home/ranking-list/ranking-list.component.html
@@ -6,7 +6,7 @@
     <div class="message-widget contact-widget">
         <!-- Message -->
         <mat-list>
-            <a routerLink="/league/{{league.id}}" *ngFor='let league of owner_leagues'>
+            <a routerLink="/league/{{league.Lid}}" *ngFor='let league of owner_leagues'>
                 <mat-list-item >
                 
                     <div class="user-img" mat-list-avatar>
