started with leave league and league creation

--- a/src/app/material-component/all-leagues/all-leagues.component.html
+++ b/src/app/material-component/all-leagues/all-leagues.component.html
@@ -18,7 +18,7 @@
                                 <span mat-line class="mail-desc">{{league.city}}</span>
                             </div> 
                             <div>
-                                <button (click)="joinLeague(league.Lid)"> Join League </button>
+                                <button mat-raised-button color="accent" (click)="joinLeague(league.Lid)"> Join League </button>
                             </div> 
                         </mat-list-item>
         
