--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -17,21 +17,21 @@
         <mat-icon>exit_to_app</mat-icon> Sign Out </button>
 </mat-menu> -->
 
-<div *ngIf="arr_league.length === 1">
-    <button mat-raised-button color="accent"  [matMenuTriggerFor]="leamenu" routerLink="create-match/{{arr_league[0].id}}">
+<div *ngIf="leagues.length === 1">
+    <button mat-raised-button color="accent" routerLink="create-match/{{leagues[0].Lid}}">
         <mat-icon>add</mat-icon>
         <label>New Match</label>
     </button>
 </div>
 
-<div *ngIf="arr_league.length != 1">
+<div *ngIf="leagues.length != 1">
     <button mat-raised-button color="accent"  [matMenuTriggerFor]="leamenu">
         <mat-icon>add</mat-icon>
         <label>New Match</label>
     </button>
     <mat-menu #leamenu="matMenu" class="mymegamenu">
-        <div *ngFor="let league of arr_league">
-            <button mat-menu-item routerLink="create-match/{{league.id}}">
+        <div *ngFor="let league of leagues">
+            <button mat-menu-item routerLink="create-match/{{league.Lid}}">
                 <mat-icon>settings</mat-icon> 
                 {{league.name}} 
             </button>
