--- a/src/app/material-component/home/ranking-list/ranking-list.component.html
+++ b/src/app/material-component/home/ranking-list/ranking-list.component.html
@@ -18,32 +18,15 @@
                         <h5 mat-line>{{league.name}} </h5>
                         <span mat-line class="mail-desc">{{league.city}}</span>
                     </div>
-        
-                    <div>
-                        <span mat-line>Rank / Players</span>
-                        <h4 mat-line> TODO </h4>
-                    </div>      
+                        <button mat-raised-button color="accent" routerLink="/all-leagues"> View </button>
+                        <button mat-button color="warn" (click)="leaveLeague(league.Lid)">
+                            <mat-icon>logout</mat-icon>
+                        </button>     
             </mat-list-item>
 
             </a>
             
         </mat-list>
-        <!-- <a routerLink="/league" *ngFor='let contact of contactsData'>
-            <div class="user-img">
-                <img [src]='contact.image' alt="user" class="img-circle">
-                
-            </div>
-            
-            <div class="mail-content">
-                <h5>{{contact.name}} </h5>
-                <span class="mail-desc">{{contact.email}}</span>
-            </div>
-
-            <div mat-line>
-                <span >Rank</span>
-                <h4>34</h4>
-            </div>
-        </a> -->
         <button mat-raised-button color="primary" routerLink="/all-leagues">
             <mat-icon>add</mat-icon>
             Search another league
